syntax = "proto3";

package agent.v1;

import "agent/v1/utils.proto";

message McpToolError {
  string error = 1;
}

message McpToolResult {
  oneof result {
    McpSuccess success = 1;
    McpToolError error = 2;
    McpRejected rejected = 3;
    McpPermissionDenied permission_denied = 4;
  }
}

message McpToolCall {
  McpArgs args = 1;
  McpToolResult result = 2;
}

message McpArgs {
  string name = 1;
  map<string, bytes> args = 2;
  string tool_call_id = 3;
  string provider_identifier = 4;
  string tool_name = 5;
}

message McpResult {
  oneof result {
    McpSuccess success = 1;
    McpError error = 2;
    McpRejected rejected = 3;
    McpPermissionDenied permission_denied = 4;
    McpToolNotFound tool_not_found = 5;
  }
}

message McpToolNotFound {
  string name = 1;
  repeated string available_tools = 2;
}

message McpTextContent {
  string text = 1;
  optional OutputLocation output_location = 2;
}

message McpImageContent {
  bytes data = 1;
  string mime_type = 2;
}

message McpToolResultContentItem {
  oneof content {
    McpTextContent text = 1;
    McpImageContent image = 2;
  }
}

message McpSuccess {
  repeated McpToolResultContentItem content = 1;
  bool is_error = 2;
}

message McpError {
  string error = 1;
}

message McpRejected {
  string reason = 1;
  bool is_readonly = 2;
}

message McpPermissionDenied {
  string error = 1;
  bool is_readonly = 2;
}
