syntax = "proto3";

package agent.v1;

message WriteArgs {
  string path = 1;
  string file_text = 2;
  string tool_call_id = 3;
  bool return_file_content_after_write = 4;
  bytes file_bytes = 5;
}

message WriteResult {
  oneof result {
    WriteSuccess success = 1;
    WritePermissionDenied permission_denied = 3;
    WriteNoSpace no_space = 4;
    WriteError error = 5;
    WriteRejected rejected = 6;
  }
}

message WriteSuccess {
  string path = 1;
  int32 lines_created = 2;
  int32 file_size = 3;
  optional string file_content_after_write = 4;
}

message WritePermissionDenied {
  string path = 1;
  string directory = 2;
  string operation = 3;
  string error = 4;
  bool is_readonly = 5;
}

message WriteNoSpace {
  string path = 1;
}

message WriteError {
  string path = 1;
  string error = 2;
}

message WriteRejected {
  string path = 1;
  string reason = 2;
}
